# ASTR3251

./: README.md  environment.yml  pyproject.toml
codes/: galaxies.py  generate_files.py  plot_utilities.py
notebooks/: H_R_Diagram_Intro.ipynb  PythonPackages.ipynb  PythonTutorial.ipynb
