[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astr3251"
description = "A Python package for 2026 ASTR 3251"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E.*"]
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "astropy",
    "healpy",
    "getdist",
    "numba",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
filegen = [
    "fitsio",
]

[project.urls]
Homepage = "https://desihigh.github.io"
Repository = "https://github.com/sujeong-lee/ASTR3251.git"

[tool.setuptools]
packages = ["astr3251"]